check _config changes

--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ title: Technology Hub Wiki
 # Your name to show in the footer
 author: Igor Molchanov
 
-theme: minima
+#theme: minima
 ###############################################
 # --- List of links in the navigation bar --- #
 ###############################################
